--- a/index.html
+++ b/index.html
@@ -1,92 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
+    <title>Home | adarshbalak</title>
+    <link href="styles.css" rel="stylesheet" ;>
 </head>
+
 <body>
-    <h1>welcome to Samar's Component Library</h1>
-    <p>I'm attendingneog.camp and i want to make a library which would make all my </p>
-    <hr>
-    
-    <h2>@typography</h2>
-    <h1>this is biggest headline</h1>
-    <h2>this is second biggest headline</h2>
-
-    <hr>
-    <h2>@container</h2>
-    <h3>fluid container</h3>
-    <div>this is fluid container and it will go till the end of the page</div>
-
-    <h3>center container</h3>
-    <div>this is centered container and it will go till the specified width</div>
-    <hr>
-
-    <h2>@links</h2>
-    <a href="/">primary Links</a>
-    <a href="/">secondary Links</a>
-    <hr>
-
-    <h2>@lists</h2>
-    <h3>Unordered List</h3>
-    <ul>
-        <li>Item one</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-        <li>Item Four</li>
-
-    </ul>
-
-    <h3>Unordered inline List</h3>
-    <ul>
-        <li>inline Item one</li>
-        <li>inline Item Two</li>
-        <li>inline Item Three</li>
-        <li>inline Item Four</li>
-
-    </ul>
-    <h3>Ordered List</h3>
-
-    <ol>
-        <li>Item one</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-        <li>Item Four</li>
 
 
-
-    </ol>
-    <hr>
-    <h2>@nav</h2>
-    <nav>
-        <div>I am Brand</div>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">IAMDEVELOPER</div>
+        <ul class=".navigation. nav-pills">
+            <li class="list-item-inline ">
+                <a class="link link-active" href="/index.html">home</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">projects</a>
             </li>
-            <li>
-                <a href="/">Contact</a>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
-    
     </nav>
-    <hr>
 
-    <h2>header</h2>
 
-    <header>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.aNGL7SpenoaXYz-6vs5s1gHaFj%26pid%3DApi&f=1" />
-        <h1>heading inside hero</h1>
+
+
+    <header class="hero">
+        <img class="hero-img" src="Work from home copy.svg" />
+        <h1 class="hero-heading">aadarsh balak the <span class="heading-inverted">web developer</span> </h1>
     </header>
 
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Technologies</h1><p>I'm familier with HTML, CSS3, Git, NodeJS, ReactJS, and, Web Hosting.</p>
+        </div>
+    </section>
 
+    <section class="section">
+        <div class="container container-center">
+            <h1>Projects</h1><p>I like to  showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-primary" href="/">See Projects</a>
+        </div>
+    </section>
 
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Blogs</h1><p>I like to  showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-primary" href="/">See Blogs</a>
+        </div>
+    </section>
 
-    <div style="height: 30vh;">
-
+    <footer class="footer container">
+        <div class="footer-header">Social Media Presence</div>
+        <ul class="social-links list-non-bullet ">
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/samarr_225/">Instagram</a></li>
+            <li class="list-item-inline"><a class="link" href="https://github.com/Samar-225">GitHub</a></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
