--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | adarshbalak</title>
+    <title>Home | SamarSalunkhe</title>
     <link href="styles.css" rel="stylesheet" ;>
 </head>
 
@@ -12,9 +12,9 @@
 
 
     <nav class="navigation container">
-        <div class="nav-brand">IAMDEVELOPER</div>
+        <div class="nav-brand">IAmSAMAR</div>
         <ul class=".navigation. nav-pills">
-            <li class="list-item-inline ">
+            <li class="list-item-inline">
                 <a class="link link-active" href="/index.html">home</a>
             </li>
             <li class="list-item-inline">
@@ -31,35 +31,70 @@
 
     <header class="hero">
         <img class="hero-img" src="Work from home copy.svg" />
-        <h1 class="hero-heading">aadarsh balak the <span class="heading-inverted">web developer</span> </h1>
+        <h1 class="hero-heading">Samar Salunkhe the <span class="heading-inverted">Web Developer</span> </h1>
     </header>
+
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>Technologies</h1><p>I'm familier with HTML, CSS3, Git, NodeJS, ReactJS, and, Web Hosting.</p>
+            <h1>About Me</h1>
+            <p>Insightful Computer Engineering Student who wants to work in a challenging and growing environment
+                for the success and development of his organization as well as his..</p>
+            
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
-            <h1>Projects</h1><p>I like to  showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-primary" href="/">See Projects</a>
+            <h1>Technologies</h1>
+            <p>I'm familier with Python3.7,C/C++, HTML, CSS3, Git, NodeJS, and, Web Hosting. Learning Machine Learning, Deep Learning, Android Developement since last few Weeks.</p>
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>Blogs</h1><p>I like to  showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-primary" href="/">See Blogs</a>
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-primary " href="/projects.html">See Projects</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-secondary" href="/blogs.html">See Blogs</a>
         </div>
     </section>
 
     <footer class="footer container">
         <div class="footer-header">Social Media Presence</div>
-        <ul class="social-links list-non-bullet ">
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
-            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/samarr_225/">Instagram</a></li>
+        <ul>
+        <li><ul class="social-links list-non-bullet ">
+            <li class="list-item-inline"><a class="link"
+                    href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.instagram.com/samarr_225/">Instagram</a>
+            </li>
             <li class="list-item-inline"><a class="link" href="https://github.com/Samar-225">GitHub</a></li>
+        </li>
+
+        <ul class="social-links list-non-bullet">
+    <li class="link"><a class="link"
+    href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a>
+
+    </li>
+
+    <li class="link"><a class="link"
+        >Contact: +91 75076 81225</a>
+    
+        </li>
+</ul></ul>
+
+
+
+
+
         </ul>
     </footer>
 </body>
