--- a/blogs.html
+++ b/blogs.html
@@ -106,7 +106,7 @@
     </section>
 
     <header class="hero">
-        <img class="hero hero-img" src="1.jpg" />
+        <img class="hero hero-img1" src="1.jpg" />
     </header>
 
     <footer class="footer container">
