--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <header class="hero">
-        <img class="hero-img" src="Work from home copy.svg" />
+        <img class="hero-img" src="images/Work from home copy.svg" />
         <h1 class="hero-heading">Samar Salunkhe the <span class="heading-inverted">Web Developer</span> </h1>
     </header>
 
