--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <header class="hero">
-        <img class="hero-img" src="Trekking.svg" />
+        <img class="hero-img" src="images/Trekking.svg" />
         <h1 class="hero-heading"><span class="heading-inverted">Harishchandragad</span> Trekking Blog </h1>
     </header>
     <section class="section ow">
@@ -33,7 +33,7 @@
     </section>
 
     <header class="hero">
-    <img class="hero hero-img1" src="7.jpg" />
+    <img class="hero hero-img1" src="images/7.jpg" />
 </header>
 
     <section class="section">
@@ -46,7 +46,7 @@
 
 
     <header class="hero">
-        <img class="hero hero-img1" src="61.jpg" />
+        <img class="hero hero-img1" src="images/61.jpg" />
     </header>
 
     <section class="section">
@@ -58,8 +58,8 @@
     </section>
 
     <header class="hero">
-        <img class="hero hero-img1" src="5.jpg" />
-        <img class="hero hero-img1" src="41.jpg" />
+        <img class="hero hero-img1" src="images/5.jpg" />
+        <img class="hero hero-img1" src="images/41.jpg" />
     </header>
 
 
@@ -73,7 +73,7 @@
     </section>
 
     <header class="hero">
-       <img class="hero hero-img1" src="2.jpg" />
+       <img class="hero hero-img1" src="images/2.jpg" />
     </header>
 
 
@@ -106,7 +106,7 @@
     </section>
 
     <header class="hero">
-        <img class="hero hero-img1" src="1.jpg" />
+        <img class="hero hero-img1" src="images/1.jpg" />
     </header>
 
     <footer class="footer container">
