--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     </section>
 
     <footer class="footer container">
-        <div class="footer-header">Social Media Presence</div>
-        <ul>
+        <div class="footer-header">Social Media Presence</div><ul>
         <li><ul class="social-links list-non-bullet ">
             <li class="list-item-inline"><a class="link"
                     href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
@@ -81,14 +80,8 @@
 
         <ul class="social-links list-non-bullet">
     <li class="link"><a class="link"
-    href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a>
-
-    </li>
-
-    <li class="link"><a class="link"
-        >Contact: +91 75076 81225</a>
-    
-        </li>
+    href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a></li><li class="link"><a class="link"
+        >Contact: +91 75076 81225</a></li>
 </ul></ul>
 
 
