--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         </li>
 
         <li>
-            <div class="container container-center">
+            <div class="container container-center ">
                 <h1>How well do you know me?</h1>
                 <small>November, 2020</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really knows you.</p>
@@ -51,6 +51,25 @@
         </li>
 
     </ul>
+
+    <footer class="footer container">
+        <div class="footer-header">Social Media Presence</div><ul>
+        <li><ul class="social-links list-non-bullet ">
+            <li class="list-item-inline ul"><a class="link"
+                    href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
+            <li class="list-item-inline ul">
+                <a class="link" href="https://www.instagram.com/samarr_225/">Instagram</a>
+            </li>
+            <li class="list-item-inline ul"><a class="link" href="https://github.com/Samar-225">GitHub</a></li>
+        </li>
+
+        <ul class="social-links list-non-bullet ul">
+    <li class="link"><a class="link"
+    href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a></li><li class="link"><a class="link"
+        >Contact: +91 75076 81225</a></li>
+</ul></ul>
+</ul>
+    </footer>
 
 </body>
 </html>
