--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 
     <footer class="footer container">
         <div class="footer-header">Social Media Presence</div><ul>
-        <li><ul class="social-links list-non-bullet ">
-            <li class="list-item-inline"><a class="link"
+        <li><ul class="social-links list-non-bullet ul">
+            <li class="list-item-inline ul"><a class="link"
                     href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
-            <li class="list-item-inline">
+            <li class="list-item-inline ul">
                 <a class="link" href="https://www.instagram.com/samarr_225/">Instagram</a>
             </li>
-            <li class="list-item-inline"><a class="link" href="https://github.com/Samar-225">GitHub</a></li>
+            <li class="list-item-inline ul"><a class="link" href="https://github.com/Samar-225">GitHub</a></li>
         </li>
 
-        <ul class="social-links list-non-bullet">
+        <ul class="social-links list-non-bullet ul">
     <li class="link"><a class="link"
     href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a></li><li class="link"><a class="link"
         >Contact: +91 75076 81225</a></li>
