--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 
     <footer class="footer container">
         <div class="footer-header">Social Media Presence</div><ul>
-        <li><ul class="social-links list-non-bullet ">
+        <li><ul class="social-links list-non-bullet ul">
             <li class="list-item-inline ul"><a class="link"
                     href="https://www.linkedin.com/in/samarsinh-salunkhe-318319197/">LinkedIn</a></li>
             <li class="list-item-inline ul">
@@ -68,7 +68,12 @@
     href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrgCgRDJGLKLTpTVHDVBRsBhMhCkxbbTGjmPktPTzjRJZHbgJVvfcCSkHphpRlshxGwBKL">Email:samarsinh225@gmail.com</a></li><li class="link"><a class="link"
         >Contact: +91 75076 81225</a></li>
 </ul></ul>
-</ul>
+
+
+
+
+
+        </ul>
     </footer>
 
 </body>
