--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">IAmSAMAR</div>
+        <div class="nav-brand">HeyThere!</div>
         <ul class=".navigation. nav-pills">
             <li class="list-item-inline ">
                 <a class="link" href="/index.html">home</a>
@@ -18,7 +18,7 @@
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/blogs.html">blogs</a>
+                <a class="link link-active" href="/blogs1.html">blogs</a>
             </li>
         </ul>
     </nav>
