--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <nav class="navigation container">
-        <div class="nav-brand">IAmSAMAR</div>
+        <div class="nav-brand">HeyThere!</div>
         <ul class=".navigation. nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/index.html">home</a>
@@ -21,7 +21,7 @@
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">blogs</a>
+                <a class="link" href="/blogs1.html">blogs</a>
             </li>
         </ul>
     </nav>
@@ -63,7 +63,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-secondary" href="/blogs.html">See Blogs</a>
+            <a class="link link-secondary" href="/blogs1.html">See Blogs</a>
         </div>
     </section>
 
