Footer in blogs1 moved

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">HeyThere!</div>
+        <div class="nav-brand">HeyThere! IamSamar..</div>
         <ul class=".navigation. nav-pills">
             <li class="list-item-inline ">
                 <a class="link" href="/index.html">home</a>
