--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">HeyThere!</div>
+        <div class="nav-brand">HeyThere! IamSamar..</div>
         <ul class=".navigation. nav-pills">
             <li class="list-item-inline ">
                 <a class="link" href="/index.html">home</a>
