--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <nav class="navigation container">
-        <div class="nav-brand">HeyThere!</div>
+        <div class="nav-brand">HeyThere! IamSamar..</div>
         <ul class=".navigation. nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/index.html">home</a>
